Expand on the UPDATE Itests and address the failures